fix focus ring partially visible when calc was selected

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -60,7 +60,7 @@ body {
 
 .calc.js-help-open .help {
     visibility: visible;
-    z-index: 10;
+    z-index: 1;
     opacity: 1;
     transition: opacity 200ms;
 }
@@ -458,6 +458,7 @@ svg {
 }
 
 .calc .non-help {
+    position: relative;
     visibility: visible;
     transition-delay: 0s;
 }
